@@ -86,6 +86,7 @@ following names for their contribution to the product.
 * RememberTheDot
 * René Kijewski
 * ST47
+* Simon Walker
 * Stefano
 * Str4nd
 
